# ElementalConceptionSystem

./: .gitignore  CMakeLists.txt  ElementalConceptionSystem.sln  README.md  identifier.sqlite  main.py
.idea_pycharm/: misc.xml  modules.xml  workspace.xml
CppElementalConceptionSystem/: FunctionManager.h  SystemLayer.h
CppElementalConceptionSystem/Unit/: BaseUnit.h  CanvasUnit.h
ECS_TestProject/: UnitTest1.cs
ElementalConceptionSystem_cs/: Class1.cs  ElementalConceptionSystem_cs.csproj
ElementalConceptionSystem_cs/Core/LanguageProcess/: ContexFreeGammar.cs
ElementalConceptionSystem_python/: __init__.py
ElementalConceptionSystem_python/Conceptions/: Attributes.py  Conceptions.py
ElementalConceptionSystem_python/Core/DataBaseTools/: LanguageDatabase_mysql.py  LanguageDatabase_sqlite.py
ElementalConceptionSystem_python/Core/DataBaseTools/GraphDataBase/: GraphDataBase.py
ElementalConceptionSystem_python/Core/LanguageProcess/: ContexFreeGrammar.py  __init__.py
ElementalConceptionSystem_python/Programs/: 预处理文本数据.ipynb  预处理现代汉语常用字符集.ipynb  预处理词典生成自带词库.ipynb
PyElementalConceptionSystem/: __init__.py
PyElementalConceptionSystem/Core/DataBaseTools/GraphDataBase/: GraphDataBase.py  __init__.py
PyElementalConceptionSystem/Core/LanguageProcess/: ContexFreeGrammar.py
Reference/: ElementalCognitionSystem_theory.code-workspace alias
draft/: draft.ipynb
src/: FunctionManager.cpp  NeuUnit.h  SystemLayer.h  main  main.cpp
src/Tasks/: TaskManager.cpp  TaskManager.h
src/Unit/: GateUnit.h
